# mattilda

./: .cursorrules  .env.example  .gitignore  CONSIDERATIONS.md  Makefile  README.md  TEST.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_auth_and_profiles.py  0002_schools_multitenant_rls.py  0003_drop_users_roles_global_admin.py  0004_soft_delete_main.py  0005_students_assoc.py  0006_fee_definitions.py  0007_charges.py  0008_invoices.py  0009_payments.py  0010_charge_process_refactor.py  0011_reconciliation_runs_and_findings.py
backend/app/: __init__.py  config.py  main.py
backend/app/application/: errors.py
backend/app/domain/: charge_enums.py  fee_recurrence.py  invoice_status.py  roles.py
backend/app/infrastructure/: logging.py
backend/app/interfaces/: __init__.py
backend/scripts/: seed_data.py
backend/tests/: conftest.py  test_auth_users.py  test_compliance_rules.py  test_ping.py
backend/tests/end2end/: helpers_tc.py  test_tc_01_full_payment_on_time.py  test_tc_02_full_payment_multiple_charges.py  test_tc_03_no_payment.py  test_tc_04_simple_partial_payment.py  test_tc_05_partial_multiple_charges.py  test_tc_06_partial_exact_boundary.py  test_tc_07_overdue_fee_interest.py  test_tc_08_interest_delta_second_generation.py  test_tc_09_no_interest_on_interest_charge.py  test_tc_10_paid_fee_unpaid_interest_no_compound.py  test_tc_11_overpayment_generates_negative_charge.py  test_tc_12_negative_charge_reduces_payment_required.py  (+4 more)
frontend/: index.html  (+3 more)
(+75 files in other folders)
