[project]
name = "mattilda-backend"
version = "0.1.0"
description = "FastAPI backend for Mattilda take-home exercise"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "celery",
  "sqlalchemy",
  "psycopg2-binary",
  "pydantic-settings",
  "redis",
  "pytest",
  "pytest-cov",
  "httpx",
  "python-jose[cryptography]",
  "passlib",
  "python-multipart",
  "email-validator",
  "alembic",
  "testcontainers[postgresql]",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.2",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
files = ["app"]
exclude = "(^alembic/|^tests/)"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
